update 프레그먼트 폴더정리

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ WonInfo/app/release/woninfo_1.0.3.apk
 WonInfo/app/release/woninfo_1.0.2.apk
 WonInfo/app/release/woninfo_1.0.1.apk
 WonInfo/app/release/woninfo_1.0.0.apk
+WonInfo.zip
