--- a/WonInfo/app/src/main/AndroidManifest.xml
+++ b/WonInfo/app/src/main/AndroidManifest.xml
@@ -44,6 +44,11 @@
             android:theme="@android:style/Theme.DeviceDefault.Light.Dialog" >
         </activity>
 
+        <activity android:name="com.bluebird.inhak.woninfo.A24Fragment.A24PopupFragment"
+            android:theme="@android:style/Theme.DeviceDefault.Light.Dialog" >
+        </activity>
+
+
         <meta-data
             android:name="com.kakao.sdk.AppKey"
             android:value="@string/kakao_app_key"/>
