update 통합 마스터 브랜치

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ WonInfo/app/release/woninfo_1.0.2.apk
 WonInfo/app/release/woninfo_1.0.1.apk
 WonInfo/app/release/woninfo_1.0.0.apk
 WonInfo.zip
+WonInfo/app/release/woninfo_1.2.4.apk
+WonInfo/app/src/main/res/drawable-xxhdpi/a_03_img_playstore.png
