--- a/WonInfo/app/build.gradle
+++ b/WonInfo/app/build.gradle
@@ -27,22 +27,31 @@ dependencies {
     implementation 'com.android.support:exifinterface:27.1.1'
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1' //recyclerview 이용 (listView 대체)
+    implementation 'com.android.support:recyclerview-v7:27.1.1'
+    //recyclerview 이용 (listView 대체)
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    implementation files('libs/jxl.jar')    // excel파일 이용할 수 있는 라이브러리
-    implementation 'com.github.chrisbanes.photoview:library:1.2.3' //핀치 뷰 이용 Gradle
+    implementation files('libs/jxl.jar')
+    // excel파일 이용할 수 있는 라이브러리
+    implementation 'com.github.chrisbanes.photoview:library:1.2.3'
+    //핀치 뷰 이용 Gradle
     implementation 'com.github.chuross:expandable-layout:1.0.5'
-    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.9.0'  // 대용량 이미지 핀치줌
-    implementation 'com.prolificinteractive:material-calendarview:1.4.3'   //캘린더
-    implementation group: 'org.jsoup', name: 'jsoup', version: '1.9.2' //버전체크용 Jsoup
-    implementation 'com.github.florent37:materialtextfield:1.0.7'  //로그인 페이지 editText Design
-    implementation 'com.google.firebase:firebase-firestore:15.0.0'  //firebase Cloud Firestore사용
-    implementation 'com.google.firebase:firebase-core:15.0.0'       //firebase login (Analytics)
-    implementation 'com.google.firebase:firebase-auth:15.0.0'       //firebase login
-
+    implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.9.0'
+    // 대용량 이미지 핀치줌
+    implementation 'com.prolificinteractive:material-calendarview:1.4.3'
+    //캘린더
+    implementation 'org.jsoup:jsoup:1.9.2'
+    //버전체크용 Jsoup
+    implementation 'com.github.florent37:materialtextfield:1.0.7'
+    //로그인 페이지 editText Design
+    implementation 'com.google.firebase:firebase-firestore:15.0.0'
+    //firebase Cloud Firestore사용
+    implementation 'com.google.firebase:firebase-core:15.0.0'
+    //firebase login (Analytics)
+    implementation 'com.google.firebase:firebase-auth:15.0.0'
+    //firebase login
     implementation group: 'com.kakao.sdk', name: 'kakaolink', version: project.KAKAO_SDK_VERSION
     //카카오 링크
 }
