에러수정 #모든 에러 수정

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ WonInfo/app/release/woninfo_1.0.0.apk
 WonInfo.zip
 WonInfo/app/release/woninfo_1.2.4.apk
 WonInfo/app/src/main/res/drawable-xxhdpi/a_03_img_playstore.png
+WonInfo/hs_err_pid14884.log
+WonInfo/replay_pid14884.log
