--- a/WonInfo/app/build.gradle
+++ b/WonInfo/app/build.gradle
@@ -17,7 +17,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    buildToolsVersion '28.0.2'
+    buildToolsVersion '28.0.3'
 }
 
 dependencies {
@@ -55,6 +55,12 @@ dependencies {
     implementation group: 'com.kakao.sdk', name: 'kakaolink', version: project.KAKAO_SDK_VERSION
     //카카오 링크
     implementation files('libs/YouTubeAndroidPlayerApi.jar')
+    //HomeMainPage auth-viewpager
+    implementation ('cn.trinea.android.view.autoscrollviewpager:android-auto-scroll-view-pager:1.1.2') {
+        exclude module: 'support-v4'
+    }
+    //이미지 로더 라이브러리
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
 }
 
 
