--- a/WonInfo/app/build.gradle
+++ b/WonInfo/app/build.gradle
@@ -61,6 +61,10 @@ dependencies {
     }
     //이미지 로더 라이브러리
     implementation 'com.github.bumptech.glide:glide:4.8.0'
+    //갤러리 이용하는 라이브러리 (프로필사진에 이용)
+    implementation 'gun0912.ted:tedbottompicker:1.2.6'
+    //권한 관리 라이브러리
+    implementation 'gun0912.ted:tedpermission:2.2.2'
 }
 
 
