합치기전 #프로필사진크롭 #파이어스토어에업로드 #프로필사진업데이트 #회원가입완료시창닫기

--- a/WonInfo/app/src/main/AndroidManifest.xml
+++ b/WonInfo/app/src/main/AndroidManifest.xml
@@ -56,6 +56,9 @@
             android:theme="@style/DialogTheme" >
         </activity>
 
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat"/>
+
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
