한솔 #팝업창연결 #게시판글팝업, 종료팝업 xml #자유시장 글목록아이템 #합침연습

--- a/WonInfo/app/src/main/AndroidManifest.xml
+++ b/WonInfo/app/src/main/AndroidManifest.xml
@@ -55,6 +55,10 @@
         <activity android:name="com.bluebird.inhak.woninfo.CreateUserPopup"
             android:theme="@style/DialogTheme" >
         </activity>
+        <activity android:name="com.bluebird.inhak.woninfo.PopupLogout"
+            android:theme="@style/DialogTheme" >
+        </activity>
+
 
 
         <meta-data
