--- a/WonInfo/app/src/main/AndroidManifest.xml
+++ b/WonInfo/app/src/main/AndroidManifest.xml
@@ -21,7 +21,8 @@
             android:name="com.bluebird.inhak.woninfo.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan">
 
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
