대충 #로그인안할때게시판접근금지 #개발자페이지연결 #설정연결

--- a/WonInfo/app/src/main/AndroidManifest.xml
+++ b/WonInfo/app/src/main/AndroidManifest.xml
@@ -46,6 +46,13 @@
         <activity android:name="com.bluebird.inhak.woninfo.LoginActivity"
             android:theme="@style/DialogTheme" >
         </activity>
+        <activity android:name="com.bluebird.inhak.woninfo.Setting"
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity android:name="com.bluebird.inhak.woninfo.SettingAlam"
+        android:screenOrientation="portrait" >
+    </activity>
+
 
         <activity android:name="com.bluebird.inhak.woninfo.Popup01Activity"
             android:theme="@style/DialogTheme" >
