--- a/WonInfo/app/src/main/AndroidManifest.xml
+++ b/WonInfo/app/src/main/AndroidManifest.xml
@@ -46,12 +46,25 @@
         <activity android:name="com.bluebird.inhak.woninfo.LoginActivity"
             android:theme="@style/DialogTheme" >
         </activity>
+        <activity android:name="com.bluebird.inhak.woninfo.MilitaryLeave"
+            android:theme="@style/DialogTheme" >
+        </activity>
+        <activity android:name="com.bluebird.inhak.woninfo.Reserve"
+            android:theme="@style/DialogTheme" >
+        </activity>
+        <activity android:name="com.bluebird.inhak.woninfo.PopupEnd"
+            android:theme="@style/DialogTheme" >
+        </activity>
         <activity android:name="com.bluebird.inhak.woninfo.Setting"
             android:screenOrientation="portrait" >
         </activity>
-        <activity android:name="com.bluebird.inhak.woninfo.SettingAlam"
+        <activity android:name="com.bluebird.inhak.woninfo.SettingAlarm"
         android:screenOrientation="portrait" >
     </activity>
+        <activity android:name="com.bluebird.inhak.woninfo.DeveloperPage"
+            android:screenOrientation="portrait" >
+        </activity>
+
 
 
         <activity android:name="com.bluebird.inhak.woninfo.Popup.Popup01Activity"
