--- a/WonInfo/app/build.gradle
+++ b/WonInfo/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     //권한 관리 라이브러리
     implementation 'gun0912.ted:tedpermission:2.2.2'
     implementation 'com.google.firebase:firebase-messaging:15.0.2'
+    implementation 'com.android.support:gridlayout-v7:28.0.0-alpha3'
 
 }
 
