한솔 디자인 추가 #개인정보 처리방침

--- a/WonInfo/app/src/main/AndroidManifest.xml
+++ b/WonInfo/app/src/main/AndroidManifest.xml
@@ -46,6 +46,9 @@
         <activity android:name="com.bluebird.inhak.woninfo.LoginActivity"
             android:theme="@style/DialogTheme" >
         </activity>
+        <activity android:name="com.bluebird.inhak.woninfo.CommunitySettingRules"
+            android:screenOrientation="portrait" >
+        </activity>
         <activity android:name="com.bluebird.inhak.woninfo.MilitaryLeave"
             android:theme="@style/DialogTheme" >
         </activity>
