14일 #게시판내로그아웃 #사진파일이름변경

--- a/WonInfo/app/build.gradle
+++ b/WonInfo/app/build.gradle
@@ -67,6 +67,7 @@ dependencies {
     implementation 'gun0912.ted:tedbottompicker:1.2.6'
     //이미지 크롭 라이브러리
     implementation'com.theartofdev.edmodo:android-image-cropper:2.6.+'
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
     //권한 관리 라이브러리
     implementation 'gun0912.ted:tedpermission:2.2.2'
     implementation 'com.google.firebase:firebase-messaging:15.0.2'
