--- a/WonInfo/app/src/main/AndroidManifest.xml
+++ b/WonInfo/app/src/main/AndroidManifest.xml
@@ -95,6 +95,9 @@
         <activity android:name="com.bluebird.inhak.woninfo.MilitaryLeave"
             android:theme="@style/DialogTheme" >
         </activity>
+        <activity android:name="com.bluebird.inhak.woninfo.Community.LongclickPopup"
+            android:theme="@style/DialogTheme" >
+        </activity>
         <activity android:name="com.bluebird.inhak.woninfo.Reserve"
             android:theme="@style/DialogTheme" >
         </activity>
