--- a/WonInfo/app/src/main/AndroidManifest.xml
+++ b/WonInfo/app/src/main/AndroidManifest.xml
@@ -20,9 +20,7 @@
         <activity
             android:name="com.bluebird.inhak.woninfo.MainActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustResize">
+            android:label="@string/app_name">
 
             <intent-filter>
                 <action android:name="android.intent.action.VIEW"/>
@@ -48,43 +46,19 @@
         </activity>
 
         <!-- Board 게시판 엑티비티-->
-        <activity android:name="com.bluebird.inhak.woninfo.Community.Board1.BoardViewActivity1"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+        <activity android:name="com.bluebird.inhak.woninfo.Community.Board1.BoardViewActivity1">
         </activity>
-        <activity android:name="com.bluebird.inhak.woninfo.Community.Board1.BoardTextBoard1"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+        <activity android:name="com.bluebird.inhak.woninfo.Community.Board1.BoardTextBoard1">
         </activity>
 
-        <activity android:name="com.bluebird.inhak.woninfo.Community.Board2.BoardViewActivity2"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+        <activity android:name="com.bluebird.inhak.woninfo.Community.Board2.BoardViewActivity2">
         </activity>
-        <activity android:name="com.bluebird.inhak.woninfo.Community.Board2.BoardTextBoard2"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+        <activity android:name="com.bluebird.inhak.woninfo.Community.Board2.BoardTextBoard2">
         </activity>
 
-        <activity android:name="com.bluebird.inhak.woninfo.Community.Board3.BoardViewActivity3"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+        <activity android:name="com.bluebird.inhak.woninfo.Community.Board3.BoardViewActivity3">
         </activity>
-        <activity android:name="com.bluebird.inhak.woninfo.Community.Board3.BoardTextBoard3"
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+        <activity android:name="com.bluebird.inhak.woninfo.Community.Board3.BoardTextBoard3">
         </activity>
 
 
@@ -95,22 +69,22 @@
         <activity android:name="com.bluebird.inhak.woninfo.MilitaryLeave"
             android:theme="@style/DialogTheme" >
         </activity>
-        <activity android:name="com.bluebird.inhak.woninfo.Community.LongclickPopup"
+        <activity android:name="com.bluebird.inhak.woninfo.InteractUserPopup"
             android:theme="@style/DialogTheme" >
         </activity>
         <activity android:name="com.bluebird.inhak.woninfo.Reserve"
             android:theme="@style/DialogTheme" >
         </activity>
-        <activity android:name="com.bluebird.inhak.woninfo.Popupgirloffically"
+        <activity android:name="com.bluebird.inhak.woninfo.Popup.Popupgirloffically"
             android:theme="@style/DialogTheme" >
         </activity>
-        <activity android:name="com.bluebird.inhak.woninfo.PopupEnd"
+        <activity android:name="com.bluebird.inhak.woninfo.Popup.PopupEnd"
             android:theme="@style/DialogTheme" >
         </activity>
-        <activity android:name="com.bluebird.inhak.woninfo.Popupdormitory"
+        <activity android:name="com.bluebird.inhak.woninfo.Popup.Popupdormitory"
             android:theme="@style/DialogTheme" >
         </activity>
-        <activity android:name="com.bluebird.inhak.woninfo.Popupvoluntary"
+        <activity android:name="com.bluebird.inhak.woninfo.Popup.Popupvoluntary"
             android:theme="@style/DialogTheme" >
         </activity>
         <activity android:name="com.bluebird.inhak.woninfo.Setting"
@@ -141,6 +115,21 @@
 
         <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat"/>
+
+
+        <activity android:name="com.bluebird.inhak.woninfo.Message.MessageMainActivity"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+
+        <activity android:name="com.bluebird.inhak.woninfo.Message.MessageRoomActivity"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
 
 
         <meta-data
